# sagecue

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: pr-title.yml  rust.yml  version-bump.yml
src/: app.rs  event.rs  handler.rs  main.rs  notify.rs  polling.rs
src/aws/: client.rs  cloudwatch.rs  mod.rs  sagemaker.rs  sagemaker_metrics.rs
src/model/: execution.rs  format.rs  logs.rs  metrics.rs  mod.rs  pipeline.rs  step.rs
src/ui/: execution_list.rs  header.rs  logs.rs  metrics.rs  mod.rs  parameter_editor.rs  pipeline_list.rs  status_bar.rs  steps.rs
