[package]
name = "pipeline-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sagemaker = "1"
aws-sdk-cloudwatchlogs = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
anyhow = "1"
notify-rust = "4"
